[package]
name = "mosaic-preview"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mosaic-core = { workspace = true }
mosaic-engine = { workspace = true }
mosaic-events = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[features]
"default" = []
"webrtc" = []
